# final-final-final

./: README.md  pyproject.toml
benchmarks/micro_repo_bench/: manifest.json
benchmarks/micro_repo_bench/tasks/chunk_list_tail/: README_issue.md
benchmarks/micro_repo_bench/tasks/median_even_case/: README_issue.md
benchmarks/micro_repo_bench/tasks/merge_touching_intervals/: README_issue.md
benchmarks/micro_repo_bench/tasks/parse_bool_whitespace/: README_issue.md
benchmarks/micro_repo_bench/tasks/roman_subtractive_pairs/: README_issue.md
configs/agent_eval/: model_routes.deterministic.example.json  model_routes.example.json  swebench_singularity.yaml
datasets/: eq_smoke.json  math_smoke.json
docs/: project_brief.md  qwen35_verified_subset_runbook.md  software_agent_extension.md
runpod/: run_verified50_qwen.sh
scripts/: build_agent_run_records.py  build_agent_study_conditions.py  build_micro_repo_benchmark.py  build_tiny_llama_fixture.py  create_swebench_manifest.py  evaluate_swebench_runs.py  run_agent_study_pipeline.py  run_delta_span1_heatmap.sh  run_hf_math_eq_combined_worker.py  run_local_micro_repo_study.py  run_mini_swe_experiment.py  run_smoke_demo.sh  setup_qwen35_verified_subset.py  summarize_agent_runs.py
slurm/: run_verified50_qwen.slurm
src/agent_eval/: __init__.py  experiment.py  local_repo_bench.py  reporting.py
src/workers/: eq_worker.py  math_worker.py  model_utils.py
tests/: test_agent_experiment.py  test_agent_reporting.py  test_agent_study_pipeline.py  test_layer_duplicator.py  test_local_repo_bench.py  test_model_utils.py
(+19 files in other folders)
