[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RYS"
version = "0.1.0"
description = "Reproducibility framework for relayering experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate",
    "datasets>=4.4.1",
    "huggingface-hub>=1.3.3",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "numpy>=1.26",
    "pytest>=8.4.1",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "safetensors>=0.7.0",
    "torch",
    "tqdm>=4.66",
    "transformers>=5.0.0rc0",
    "xgboost>=3.2.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["src*", "hf_export*"]

[tool.uv]
prerelease = "allow"

[tool.pytest.ini_options]
testpaths = ["tests"]
